[package]
name = "cipher-util"
version = "0.1.0"
edition = "2024"

[dependencies]
rsa = { version = "0.9.8", features = ["pem"] }
rand = "0.8"
sha2 = "0.10.8"
pkcs8 = { version = "0.10.2", features = ["pem"] }

ring = { version = "0.17" }
bytes = "1.10.1"

anyhow = "1"
futures = "0.3.31"
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
hex = "0.4.3"